--- a/app/src/main/res/layout/my_management_account.xml
+++ b/app/src/main/res/layout/my_management_account.xml
@@ -65,7 +65,8 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="0dp"
                     android:background="@drawable/circle_border"
-                    android:padding="4dp" />
+                    android:padding="4dp"
+                    android:src="@drawable/logo2"/>
 
                 <TextView
                     android:id="@+id/user_name"
@@ -74,7 +75,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="8dp"
                     android:textColor="#000000"
-                    android:textSize="24sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -93,7 +94,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="367dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingVertical="5dp">
@@ -188,7 +190,6 @@
             android:text="退出账号"
             android:textSize="18sp" />
 
-
     </LinearLayout>
 
 
@@ -197,11 +198,10 @@
         <LinearLayout
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:background="#EDEDED"
+            android:layout_height="wrap_content"
+            android:background="#ededed"
             android:orientation="horizontal"
-            android:paddingVertical="10dp">
+            android:paddingVertical="8dp">
 
             <!-- 首页按钮 -->
             <LinearLayout
@@ -215,13 +215,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_home_blue_24dp" />
+                    android:src="@drawable/ic_home_black_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="首页"
-                    android:textColor="#0044cc"
+                    android:textColor="#000000"
                     android:textSize="12sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -304,17 +304,17 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_person_black_24dp" />
+                    android:src="@drawable/ic_person_blue_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="我的"
-                    android:textColor="#000000"
+                    android:textColor="#0044cc"
                     android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+</LinearLayout>
 
 
 
