--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -33,12 +33,10 @@
             android:background="#808080" />
     </LinearLayout>
 
-
-
-    <!-- 底部导航栏 -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -98,7 +96,6 @@
         android:layout_gravity="bottom"
         android:background="#ededed"
         android:orientation="horizontal"
-        android:layout_marginTop="335dp"
         android:paddingVertical="5dp">
 
         <!-- 首页按钮 -->
