--- a/app/src/main/res/layout/camera_translation.xml
+++ b/app/src/main/res/layout/camera_translation.xml
@@ -134,7 +134,7 @@
 
         </androidx.cardview.widget.CardView>
 
-        <Button
+        <android.widget.Button
             android:id="@+id/btn_submit_translation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
