--- a/app/src/main/res/layout/camera_recognition.xml
+++ b/app/src/main/res/layout/camera_recognition.xml
@@ -11,50 +11,53 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.34" />
+        app:layout_constraintGuide_begin="50dp" />
 
     <!-- 识别出的文字区域 -->
     <TextView
         android:id="@+id/txt_recognized_text"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_translate"
-        android:padding="16dp"
+        android:padding="50dp"
         android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:background="@drawable/translation_result_background"
         android:scrollbars="vertical" />
 
     <!-- 翻译按钮 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btn_translate"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/txt_recognized_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="识别的文字  翻译结果如下"
+        android:text="点击翻译"
+        android:padding="10dp"
         android:textSize="20sp"
         android:layout_marginTop="60dp"
         android:textColor="@color/buttonTextColor"
-        android:background="@drawable/translation_result_background" />
+        android:background="@drawable/circle_border" />
 
     <!-- 翻译后的文字区域 -->
     <TextView
         android:id="@+id/txt_translated_text"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btn_translate"
+        android:background="@drawable/translation_result_background"
+        android:padding="50dp"
+        android:scrollbars="vertical"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="16dp"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:background="@drawable/translation_result_background"
-        android:scrollbars="vertical" />
+        app:layout_constraintTop_toBottomOf="@id/btn_translate"
+        app:layout_constraintVertical_bias="0.135" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
