--- a/app/src/main/res/layout/download_translate.xml
+++ b/app/src/main/res/layout/download_translate.xml
@@ -82,20 +82,20 @@
 </ScrollView>
 
     <!-- 退出按钮 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btn_translate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="100dp"
         android:layout_marginBottom="96dp"
         android:background="@drawable/button_background"
-        android:padding="16dp"
+        android:padding="10dp"
         android:text="翻译"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="20dp" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/btn_exit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
