--- a/app/src/main/res/layout/find_key.xml
+++ b/app/src/main/res/layout/find_key.xml
@@ -78,7 +78,7 @@
                 android:layout_marginBottom="30dp"/>
 
             <!-- 提交按钮 -->
-            <Button
+            <android.widget.Button
                 android:id="@+id/btn_submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
                 android:background="@drawable/button_background" />
 
             <!-- 返回按钮 -->
-            <Button
+            <android.widget.Button
                 android:id="@+id/btn_forget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
