--- a/app/src/main/res/layout/home_translation.xml
+++ b/app/src/main/res/layout/home_translation.xml
@@ -143,7 +143,7 @@
             </ScrollView>
 
             <!-- 翻译操作按钮 -->
-            <Button
+            <android.widget.Button
                 android:id="@+id/btn_translate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
