--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -44,7 +44,7 @@
         android:padding="9dp"
         android:background="@drawable/custom_edittext_border" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/loginButton"
         android:layout_width="310dp"
         android:layout_height="wrap_content"
@@ -58,28 +58,31 @@
         android:textColor="#FFFFFF" />
 
 
-    <Button
+    <android.widget.Button
         android:id="@+id/forgotPasswordButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/circle_border"
         android:text="忘记密码？点击此处找回密码"
         android:textStyle="bold"
         android:layout_marginTop="50dp"
         android:textAlignment="textEnd"
         android:padding="10dp"
         android:textSize="14sp"
+
         android:textColor="#87CEFA"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onForgotPasswordClick" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="没有账号？点击此处注册账号"
+        android:background="@drawable/circle_border"
         android:textStyle="bold"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="5dp"
         android:textSize="14sp"
         android:textAlignment="textEnd"
         android:padding="10dp"
