--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -72,7 +72,7 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-            <Button
+            <android.widget.Button
                 android:id="@+id/log_button"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
