--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -74,7 +74,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="通知"
+                android:text="护眼模式"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -83,7 +83,7 @@
                 android:id="@+id/switch_notifications"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="接收通知"
+                android:text="开启护眼模式"
                 android:textSize="16sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -121,7 +121,7 @@
     </androidx.cardview.widget.CardView>
 
     <!-- 提交或保存按钮 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
