--- a/app/src/main/res/layout/suggestions.xml
+++ b/app/src/main/res/layout/suggestions.xml
@@ -75,7 +75,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- 提交按钮 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
