--- a/app/src/main/res/layout/edit_info.xml
+++ b/app/src/main/res/layout/edit_info.xml
@@ -24,15 +24,16 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_name"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="50dp"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@id/txt_title">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_name"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:hint=" 用户名"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:hint="   用户名"
             android:background="@drawable/custom_edittext_border"
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -41,15 +42,16 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_email"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
+        android:gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:hint=" 邮箱"
     app:layout_constraintTop_toBottomOf="@id/til_name">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/et_email"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:hint=" 邮箱"
     android:background="@drawable/custom_edittext_border"
     android:inputType="textEmailAddress" />
@@ -59,14 +61,15 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_phone"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:gravity="center_horizontal"
+        android:layout_height="50dp"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@id/til_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_phone"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
             android:hint=" 密码"
             android:background="@drawable/custom_edittext_border"
             android:inputType="phone" />
@@ -107,7 +110,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/button_background"
         android:text="提交"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/layout_avatar" />
 
@@ -118,11 +121,11 @@
         android:background="@drawable/button_background"
         android:text="放弃"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.892"
-        tools:layout_editor_absoluteX="4dp" />
+        app:layout_constraintVertical_bias="0.935"
+        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
