--- a/app/src/main/res/layout/my_management_account.xml
+++ b/app/src/main/res/layout/my_management_account.xml
@@ -204,8 +204,7 @@
                     android:layout_height="wrap_content"
                     android:text="首页"
                     android:textColor="#000000"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <!-- 语音按钮 -->
