--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,10 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/divider"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="73dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
-        android:text="Welcome！\n欢迎使用 Innotranslate翻译APP!"
+        android:text="欢迎使用\n Innotranslate翻译APP！"
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold" />
