--- a/app/src/main/res/layout/edit_info.xml
+++ b/app/src/main/res/layout/edit_info.xml
@@ -11,7 +11,7 @@
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="- 更改个人资料 -"
+        android:text=" 更改个人资料 "
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold"
